# MAI_OS

.devcontainer/: Dockerfile
KP/: client  client.cpp  server  server.cpp
KP/doc/: Отчет_КП.docx
lab1/doc/: Отчет_лаба1.docx
lab1/src/: child  child.c  file.txt  main  main.c
lab2/: main  main.c  simulation
lab2/include/: lab2.h
lab2/src/: lab2_utils.c  main.c
lab3/doc/: Отчет_лаба3.docx
lab3/src/: child  child.c  main  main.c
lab4/: CMakeLists.txt  Makefile  main1  main2
lab4/Lib/include/Func_1/: derivative_first.hpp  derivative_second.hpp
lab4/Lib/include/Func_2/: e_formule.hpp  e_series.hpp
lab4/Lib/src/Func1/: derivative_first.cpp  derivative_second.cpp
lab4/Lib/src/Func2/: e_formule.cpp  e_series.cpp
lab4/Main1/: main1.cpp
lab4/Main2/: main2.cpp
lab4/doc/: Отчет_лаба4.docx
lab4/lib/: libfunc1.dylib  libfunc2.dylib
lab4/src/: func.h  func1.c  func2.c  main1.c  main2.c
lab5-7/include/: calc_node.h  manage_node.h  node.h  tree.h
lab5-7/src/: calc_node.c  manage_node.c  message.c  tree.c
lab57/: Makefile  ext_main.c  main.c
lab57/doc/: Отчет57.docx
lab57/include/: comp_utils.h  message.h  n_op.h  node.h
lab57/src/: copm_utils.c  n_op.c
laba2/: main  main.c
laba2/doc/: Отчет_lab2.docx
